--- a/expenses_tracker/app/templates/register.html
+++ b/expenses_tracker/app/templates/register.html
@@ -15,4 +15,25 @@
 <body>
     <div class="container">
         <h2 class="text-center mt-5">Sign Up</h2>
-        <form action="/
+        <div class="row justify-content-center">
+            <div class="col-lg-5">
+                <form method="POST">
+                    <div class="form-group">
+                        <label for="username">Username</label>
+                        <input type="text" class="form-control" name="username" id="username" placeholder="Username" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email address</label>
+                        <input type="email" class="form-control" name="email" id="email" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="password">Password</label>
+                        <input type="password" class="form-control" name="password" id="password" placeholder="Password" required>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Sign Up</button>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
+</html>
