--- a/expenses_tracker/app/templates/login.html
+++ b/expenses_tracker/app/templates/login.html
@@ -17,8 +17,8 @@
         <h2 class="text-center mt-5">Login</h2>
         <form action="/login" method="post" class="mt-3">
             <div class="form-group">
-                <label>Email</label>
-                <input type="email" class="form-control" name="email" required>
+                <label>Email or Username</label>
+                <input type="text" class="form-control" name="username_email" required>
             </div>
             <div class="form-group">
                 <label>Password</label>
