--- a/expenses_tracker/app/static/styles.css
+++ b/expenses_tracker/app/static/styles.css
@@ -1,4 +1,3 @@
-/* ... */
 body {
     background: linear-gradient(to right, #1cb5e0, #000046);
     color: white;
@@ -183,4 +182,79 @@ body {
 .add-expense-bracket.expanded .add-expense-content {
     display: block;
 }
-/* ... */
+
+.select2-container .select2-selection--single {
+    height: 38px;
+    border: none;
+    background-color: #343a40;
+    color: #fff;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__rendered {
+    line-height: 37px;
+    color: #fff;
+}
+
+.select2-container--default .select2-selection--single .select2-selection__arrow {
+    height: 36px;
+}
+
+.select2-container--default.select2-container--focus .select2-selection--single {
+    border-color: #fff;
+    background-color: #343a40;
+    box-shadow: none;
+}
+
+.select2-dropdown {
+    border: none;
+    background-color: #343a40;
+    color: #fff;
+}
+
+.select2-results__option {
+    padding: 6px;
+    user-select: none;
+    -webkit-user-select: none;
+    background-color: #343a40;
+    color: #fff;
+}
+
+.select2-results__option[aria-selected="true"] {
+    background-color: #343a40;
+}
+
+.select2-results__option--highlighted[aria-selected] {
+    background-color: #495057;
+    color: white;
+}
+
+.select2-container {
+    width: 100% !important;
+}
+
+.chart-container {
+    background-color: #1c2331;
+    border: none;
+    border-radius: 8px;
+    margin-bottom: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    box-sizing: border-box;
+    width: 50%;  /* Adjust as needed */
+    margin: auto;
+    margin-bottom: 20px;
+}
+
+.chart-container h2 {
+    font-size: 20px;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+    margin-bottom: 15px;
+}
+
+.chart {
+    max-width: 100%;
+    height: auto;
+    min-height: 400px;  /* Adjust as needed */
+}
