testing gmail API

--- a/expenses_tracker/app/templates/dashboard.html
+++ b/expenses_tracker/app/templates/dashboard.html
@@ -180,7 +180,7 @@
         <h2>Expenses by Category</h2>
         <div class="chart">
             <canvas id="pieChart"></canvas>
-        </div>
+        </div>2
     </div>
     <div class="chart-container">
         <h2>Expenses Over Time</h2>
